# agent-context-hub

./: .gitignore  CLAUDE.md  CONTENT_STANDARDS.md  CONTRIBUTING.md  LICENSE  README.md  achub.yaml.example  demo.tape  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
benchmarks/: README.md  evaluator.py  runner.py
docs/: adding-a-domain.md  agent-integration.md  architecture.md  content-authoring.md
examples/: basic_usage.py  crewai_integration.py  langchain_integration.py  sample_adversarial_ai_portfolio.json  sample_ai_supervision_portfolio.json  sample_alt_investments_portfolio.json  sample_asset_location_portfolio.json  sample_cash_management_portfolio.json  sample_comprehensive_portfolio.json  sample_copy_trading_portfolio.json  sample_crypto_portfolio.json  sample_custodial_portfolio.json  sample_direct_indexing_portfolio.json  sample_drift_portfolio.json  sample_esg_portfolio.json  sample_event_contracts_portfolio.json  sample_futures_portfolio.json  sample_gfv_portfolio.json  sample_goal_portfolio.json  sample_income_portfolio.json  sample_leveraged_etf_portfolio.json  sample_margin_lending_portfolio.json  sample_portfolio.json  sample_recurring_portfolio.json  sample_short_portfolio.json  sample_suitability_portfolio.json  sample_tlh_portfolio.json  sample_trust_portfolio.json  sample_zero_dte_portfolio.json
schemas/: content-frontmatter.json  structured-check.json
tests/: conftest.py  test_benchmark_llm.py  test_check.py  test_check_adversarial_ai.py  test_check_ai_supervision.py  test_check_alt_investments.py  test_check_asset_location.py  test_check_cash_management.py  test_check_copy_trading.py  test_check_crypto.py  test_check_custodial.py  test_check_direct_indexing.py  test_check_drip.py  test_check_esg_screening.py  test_check_event_contracts.py  test_check_futures.py  test_check_gfv.py  test_check_goal_allocation.py  test_check_income_rmd.py  test_check_ira.py  test_check_margin_lending.py  test_check_options_margin.py  test_check_portfolio_drift.py  test_check_recurring.py  test_check_short_selling.py  test_check_suitability.py  test_check_tlh.py  (+11 more)
(+106 files in other folders)
